# doosan-robot2

./: README.md  moveit2_setup
common2/: CHANGELOG.rst  CMakeLists.txt  package.xml
common2/imp/: DR_common2.py  DR_error2.py  DR_tcp_client2.py  DR_tcp_server2.py  DSR_ROBOT2.py  DSR_util2.py
common2/include/: dsr_robot.h
common2/resource/: fake_joint_driver_node.cpp
common2/servicepack/: auto_setup  setup_serial_node
common2/servicepack/serial_node_example/: CHANGELOG.rst  CMakeLists.txt  package.xml
common2/src/: dsr_robot.cpp
dsr_control2/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
dsr_control2/config/: console.conf  default.yaml  dsr_control.yaml
dsr_control2/include/dsr_control2/: dsr_hw_interface2.h
dsr_control2/launch/: dsr_control2.launch.py  dsr_moveit2.launch.py
dsr_control2/src/: dsr_control_node2.cpp  dsr_hw_interface2.cpp
dsr_description2/: CHANGELOG.rst  CMakeLists.txt  package.xml
dsr_description2/config/: macro.decorations.xacro  macro.gazebo.xacro  macro.materials.xacro  macro.wheel.xacro
dsr_description2/launch/: a0509.launch.py  a0912.launch.py  dsr_description.launch.py  m0609.launch.py  m0617.launch.py  m1013.launch.py  m1509.launch.py
dsr_description2/meshes/a0509_blue/: A0509_1_1.dae  A0509_1_2.dae  A0509_2_0.dae  A0509_2_1.dae  A0509_2_2.dae  A0509_3_1.dae  A0509_4_0.dae  A0509_4_1.dae  A0509_5_0.dae  A0509_5_1.dae
dsr_description2/meshes/a0509_white/: A0509_0_0.dae  A0509_1_0.dae  A0509_1_1.dae  A0509_2_0.dae  A0509_2_1.dae  A0509_2_2.dae  A0509_3_0.dae  A0509_6_0.dae
dsr_description2/meshes/a0912_white/: A0912_2_1.dae
dsr_description2/meshes/h2017_blue/: H2017_1_0.dae  H2017_2_0.dae  H2017_2_2.dae  H2017_3_0.dae  H2017_4_0.dae  H2017_4_1.dae  H2017_5_0.dae
dsr_description2/meshes/h2017_white/: H2017_0_0.dae  H2017_1_0.dae  H2017_2_0.dae  H2017_2_1.dae  H2017_2_2.dae  H2017_3_0.dae  H2017_4_0.dae  H2017_4_1.dae  H2017_5_0.dae
dsr_description2/meshes/h2515_blue/: H2515_0_0.dae  H2515_1_0.dae  H2515_2_0.dae  H2515_2_2.dae  H2515_3_0.dae  H2515_4_0.dae  H2515_4_1.dae  H2515_5_0.dae
dsr_description2/meshes/m0609_blue/: MF0609_0_0.dae  MF0609_1_0.dae  MF0609_2_0.dae  MF0609_2_2.dae  MF0609_3_0.dae  MF0609_4_0.dae  MF0609_4_1.dae  MF0609_5_0.dae
dsr_description2/meshes/m0617_blue/: MF0617_0_0.dae  MF0617_1_0.dae  MF0617_2_0.dae  MF0617_2_2.dae  MF0617_3_0.dae  MF0617_4_0.dae  MF0617_4_1.dae  MF0617_5_0.dae
dsr_description2/meshes/m1013_blue/: MF1013_1_0.dae  MF1013_2_0.dae  MF1013_2_2.dae  MF1013_3_0.dae  MF1013_4_0.dae  MF1013_4_1.dae  MF1013_5_0.dae
dsr_description2/meshes/m1509_blue/: MF1509_0_0.dae  MF1509_1_0.dae  MF1509_2_0.dae  MF1509_2_2.dae  MF1509_3_0.dae  MF1509_4_0.dae  MF1509_4_1.dae  MF1509_5_0.dae
dsr_description2/rviz/: default.rviz  m1013.rviz  moveit.rviz
dsr_description2/urdf/: a0509.blue.urdf  a0509.urdf  a0509.white.urdf  a0912.blue.urdf  a0912.urdf  a0912.white.urdf  h2017.blue.urdf  h2017.white.urdf  h2515.blue.urdf  h2515.white.urdf  m0609.blue.urdf  m0609.urdf  m0609.white.urdf  m0617.blue.urdf  m0617.urdf  m0617.white.urdf  m1013.blue.urdf  m1013.urdf  m1013.white.urdf  m1509.blue.urdf  m1509.urdf  m1509.white.urdf
dsr_description2/xacro/: a0509.urdf.xacro  a0912.urdf.xacro  h2017.urdf.xacro  h2515.urdf.xacro  m0609.urdf.xacro  m0617.urdf.xacro  m1013.urdf.xacro  m1509.urdf.xacro  macro.a0509.blue.xacro  macro.a0509.white.xacro  macro.a0912.blue.xacro  macro.a0912.white.xacro  macro.h2017.blue.xacro  macro.h2017.white.xacro  macro.h2515.blue.xacro  macro.h2515.white.xacro  macro.m0609.blue.xacro  macro.m0609.white.xacro  macro.m0617.blue.xacro  macro.m0617.white.xacro  macro.m1013.blue.xacro  macro.m1013.white.xacro  macro.m1509.blue.xacro  macro.m1509.white.xacro
dsr_example2/py/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
dsr_example2/py/dsr_example2_py/: dsr_service_motion_basic.py  dsr_service_motion_simple.py  dsr_service_motion_simple_class.py
dsr_gazebo2/: CHANGELOG.rst  CMakeLists.txt  package.xml
dsr_gazebo2/include/: fake_node.hpp
dsr_gazebo2/launch/: dsr_gazebo.launch.py  robot_state_publisher.launch.py
dsr_gazebo2/model/a0509/: a0509.sdf  model.config
dsr_gazebo2/model/a0912/: a0912.sdf  model.config
dsr_gazebo2/model/h2017/: h2017.sdf  model.config
dsr_gazebo2/model/h2515/: h2515.sdf  model.config
dsr_gazebo2/model/m0609/: m0609.sdf  model.config
dsr_gazebo2/model/m0617/: m0617.sdf  model.config
dsr_gazebo2/model/m1013/: m1013.sdf  model.config  model.sdf
dsr_gazebo2/model/m1509/: m1509.sdf  model.config
dsr_gazebo2/src/: fake_node.cpp
dsr_gazebo2/worlds/: empty_world.model  empty_world.world
dsr_launcher2/: CHANGELOG.rst  CMakeLists.txt  package.xml
dsr_launcher2/launch/: dsr_joint_state_pub.launch.py  single_robot_gazebo.launch.py  single_robot_rviz.launch.py  single_robot_rviz2.launch.py  single_robot_rviz_gazebo.launch.py
dsr_launcher2/scripts/: dmodel.py
dsr_launcher2/worlds/: car.world  empty.world
dsr_msgs2/: CHANGELOG.rst  CMakeLists.txt  package.xml
dsr_msgs2/msg/: JogMultiAxis.msg  RobotError.msg  RobotState.msg  RobotStop.msg
dsr_msgs2/srv/aux_control/: GetControlMode.srv  GetControlSpace.srv  GetCurrentPosj.srv  GetCurrentPosx.srv  GetCurrentRotm.srv  GetCurrentSolutionSpace.srv  GetCurrentToolFlangePosx.srv  GetCurrentVelj.srv  GetCurrentVelx.srv  GetDesiredPosj.srv  GetDesiredPosx.srv  GetDesiredVelj.srv  GetDesiredVelx.srv  GetExternalTorque.srv  GetJointTorque.srv  GetOrientationError.srv  GetSolutionSpace.srv  GetToolForce.srv
dsr_msgs2/srv/drl/: DrlPause.srv  DrlResume.srv  DrlStart.srv  DrlStop.srv
dsr_msgs2/srv/force/: AlignAxis1.srv  AlignAxis2.srv  CalcCoord.srv  CheckForceCondition.srv  CheckOrientationCondition1.srv  CheckOrientationCondition2.srv  CheckPositionCondition.srv  CoordTransform.srv  GetUserCartCoord.srv  GetWorkpieceWeight.srv  IsDoneBoltTightening.srv  OverwriteUserCartCoord.srv  ParallelAxis1.srv  ParallelAxis2.srv  ReleaseComplianceCtrl.srv  ReleaseForce.srv  (+7 more)
moveit_config_m1013/: CMakeLists.txt  package.xml
moveit_config_m1013/launch/: m1013.launch.py
(+179 files in other folders)
