<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsr_control2</name>
  <version>0.1.0</version>
  <description>The dsr_control2 package</description>

  <author email="kabkyoum.kim@doosan.com">Kab Kyoum Kim</author>
  <author email="jinhyuk.gong@doosan.com">Jin Hyuk Gong</author>
  <author email="jeongwoo1.lee@doosan.com">Jeongwoo Lee</author>   

  <maintainer email="ros.robotics@doosan.com">Doosan Robotics</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/doosan_robotics</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>dsr_msgs2</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <!--build_depend>moveit_msgs</build_depend-->

  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>dsr_msgs2</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <!--build_export_depend>moveit_msgs</build_export_depend-->

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>dsr_msgs2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>  
  <exec_depend>hardware_interface</exec_depend>  
  <!--exec_depend>moveit_msgs</exec_depend-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
