<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsr_msgs2</name>
  <version>0.1.1</version>
  <description>The dsr_msgs2 package</description>
  <author email="kabkyoum.kim@doosan.com">Kab Kyoum Kim</author>
  <maintainer email="ros.robotics@doosan.com">Doosan Robotics</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/doosan_robotics</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!--depend>action_msgs</depend-->

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <!--ros1_bridge mapping_rules="mapping_rules.yaml"/-->
  </export>
</package>
